services/rsc/app2/nginx.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nginx-app2
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-app2-deployment
  namespace: nginx-app2
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx-app2
  template:
    metadata:
      labels:
        app: nginx-app2
    spec:
      containers:
      - name: nginx-app2
        image: nginx:latest
        ports:
        - containerPort: 80
        volumeMounts:
        - name: app2-html
          mountPath: /usr/share/nginx/html
      volumes:
      - name: app2-html
        configMap:
          name: nginx-app2-index
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-app2-service
  namespace: nginx-app2
spec:
  type: ClusterIP
  selector:
    app: nginx-app2
  ports:
  - port: 80
    targetPort: 80
